FeatureAdmin2013 ChangeLog
  - this file is intended for developers
  - chronological; newest info at bottom

Feb, 2013 - Perry
Trapped & logged Access Denied exceptions in Find Faulty Feature (so it doesn't crash)
Fix Find Activated Feature to correctly find web application scoped features
Factored code to find activated features into new ActivationFinder class
Record & log exception messages when FeatureManager enumerates exceptions

Feb 24, 2013 - Achim
Added CompatibilityLevel property to Feature class, that renders the compatibility level as prefix of the guid (e.g. [15/...)
Issue 8513 - fixed SP2013 feature definition uninstall, that compatibility level is recognized
Updated error text for access denied on level SPWeb to recommend also full control via web application user policy
changed window title of feature admin to be the same for 2007, 2010 and 2013 version
changed assembly name to contain the year name

** Feb 24, 2013 - RELEASE v 2.3: "FeatureAdmin for SharePoint 2013 - v2.3" **

Aug, 2015 - Perry
Display more info in the faulty feature removal prompt. Add activation time, 
and solution info (if available). Remove unpopulated compatibility level.
Fix faulty feature finder to continue, and allow skipping

** Aug 27, 2015 - RELEASE v 2.4: "FeatureAdmin for SharePoint 2013 - v2.4" **

Aug 27, 2015 - Perry
Check AdminService webapps also

** Aug 27, 2015 - RELEASE 2.4.2: "FeatureAdmin for SharePoint 2013 - v2.4.2" **

Sep, 2015 - Perry
Add exception wrapper around removing fault site collection feature

** Sep 23, 2015: RELEASE 2.4.4: "FeatureAdmin for SharePoint 2013 - v2.4.4" **

Sep, 2015 - Perry
Add more detail to faulty feature msgbox

Feb, 2016 - Perry
Fix FeatureManager.ForceUninstallFeatureDefinition (erroneously threw exception)

** Feb 10, 2016: RELEASE 2.4.6: "FeatureAdmin for SharePoint 2013 - v2.4.6" **

Feb, 2016 - Perry
Fixed ChangeLog (this) to be chronological from top to bottom
Copy Location.cs, LocationManager.cs,